# codehere

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
codehere/: __init__.py  cli.py  code_here.py  codehere.py  converter.py  exceptions.py  processors.py  utils.py
tests/: conftest.py  test_cli.py  test_convert_api.py  test_converter.py  test_processors.py
tests/fixtures/: sample.ipynb  sample.md  sample.py
