[project]
name = "codehere"
version = "0.2.0"
description = "Prepare Jupyter notebooks, Python files, and Markdown for seminars and homework"
authors = [{name = "Alexey Skrynnik", email = "skrynnikalexey@gmail.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
codehere = "codehere.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["*.ipynb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
